--- a/bootstrap/kind/crossplane/providerconfigs/kustomization.yaml
+++ b/bootstrap/kind/crossplane/providerconfigs/kustomization.yaml
@@ -1,7 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
 resources:
+  - providerconfig-gke-control-plane.yaml
   - providers-config.yaml
-  # TODO this is kubeconfig secret needed for k8s provider (maybe not even needed - validate later)
-  #- providerconfig-gke-control-plane.yaml
