--- a/bootstrap/kind/crossplane/kustomization.yaml
+++ b/bootstrap/kind/crossplane/kustomization.yaml
@@ -1,12 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
 resources:
-  - base/namespaces
-  - base/rbac
-  - base/functions
-  - base/providers
-  - base/compositions
-  - secrets
-  - providerconfigs
-  - composite-resources
+  - install/
+  - providers/
+  - functions/
+  - compositions/
+  - providerconfigs/
+  - clusters/
