--- a/bootstrap/kind/flux/control-plane-cluster-flux-kustomization.yaml
+++ b/bootstrap/kind/flux/control-plane-cluster-flux-kustomization.yaml
@@ -21,5 +21,5 @@ spec:
       name: control-plane-cluster
       namespace: gkecluster-control-plane
   timeout: 15m
-  #dependsOn: # TODO
-  #  - name: crossplane-providers
+  dependsOn:
+    - name: crossplane
