--- a/bootstrap/kind/flux/crossplane-source.yaml
+++ b/bootstrap/kind/flux/crossplane-source.yaml
@@ -13,20 +13,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: crossplane-install
-  namespace: flux-system
-spec:
-  interval: 10m
-  path: "./bootstrap/kind/crossplane/install"
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: crossplane-config
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: crossplane-base
+  name: crossplane
   namespace: flux-system
 spec:
   interval: 10m
@@ -47,48 +34,6 @@ spec:
       kind: Deployment
       name: crossplane-rbac-manager
       namespace: crossplane-system
-  postBuild:
-    substituteFrom:
-      - kind: ConfigMap
-        name: platform-config
-      - kind: Secret
-        name: platform-secrets
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: crossplane-providerconfigs
-  namespace: flux-system
-spec:
-  interval: 10m
-  path: "./bootstrap/kind/crossplane/providerconfigs"
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: crossplane-config
-  #dependsOn:
-  #  - name: crossplane-providers-health
-  postBuild:
-    substituteFrom:
-      - kind: ConfigMap
-        name: platform-config
-      - kind: Secret
-        name: platform-secrets
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: crossplane-composite-resources
-  namespace: flux-system
-spec:
-  interval: 10m
-  path: "./bootstrap/kind/crossplane/composite-resources"
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: crossplane-config
-  dependsOn:
-    - name: crossplane-providerconfigs
   postBuild:
     substituteFrom:
       - kind: ConfigMap
