--- a/bootstrap/kind/flux/notification-provider.yaml
+++ b/bootstrap/kind/flux/notification-provider.yaml
@@ -25,4 +25,5 @@ spec:
       namespace: flux-system
   eventMetadata:
     project: "${PROJECT_ID}"
+    location: "${ZONE}"
     cluster: "control-plane"
