--- a/bootstrap/kind/flux/crossplane-source.yaml
+++ b/bootstrap/kind/flux/crossplane-source.yaml
@@ -103,6 +103,10 @@ kind: Kustomization
 metadata:
   name: control-plane-cluster
   namespace: flux-system
+  labels:
+    tornado-demo.io/cluster: control-plane
+    tornado-demo.io/cluster-type: control
+    tornado-demo.io/cluster-env: dev
   annotations:
     # TODO: using different key to understand better how it works.
     event.toolkit.fluxcd.io/cluster-name: "control-plane"
