--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,5 @@
 
 .env.*
 .vscode
-.vscode/mcp.json
 
-.claude/
-
-crossplane-gke-sa-key.json
-
-claude_desktop_config.json
-claude_desktop_config_mcp.json
+.claude/settings.local.json
