workflow and script fixes

--- a/clusters/control-plane/apps-dev-flux-kustomization.yaml
+++ b/clusters/control-plane/apps-dev-flux-kustomization.yaml
@@ -26,3 +26,7 @@ spec:
   timeout: 15m
   dependsOn:
     - name: gke-cluster-compositions
+  postBuild:
+    substituteFrom:
+      - kind: ConfigMap
+        name: platform-config
