--- a/.github/workflows/flux-bootstrap.yml
+++ b/.github/workflows/flux-bootstrap.yml
@@ -28,11 +28,11 @@ jobs:
     - name: Extract cluster info from payload
       id: cluster-info
       run: |
-        PROJECT_ID="${{ github.event.client_payload.metadata.project }}"
-        echo "::add-mask::${PROJECT_ID}"
-        echo "projectID=${PROJECT_ID}" >> $GITHUB_OUTPUT
+        #PROJECT_ID="${{ github.event.client_payload.metadata.project }}"
+        #echo "::add-mask::${PROJECT_ID}"
+        #echo "projectID=${PROJECT_ID}" >> $GITHUB_OUTPUT
         echo "cluster=${{ github.event.client_payload.metadata.cluster }}" >> $GITHUB_OUTPUT
-        echo "location=${{ github.event.client_payload.metadata.location }}" >> $GITHUB_OUTPUT
+        echo "location=australia-southeast1-a" >> $GITHUB_OUTPUT
         echo "should_proceed=true" >> $GITHUB_OUTPUT
 
     - name: Setup Flux CLI
@@ -99,13 +99,14 @@ jobs:
         # Create the namespace if it doesn't already exist
         kubectl get namespace flux-system >/dev/null 2>&1 || kubectl create namespace flux-system
         # Always create or update the ConfigMap
-        kubectl create configmap cluster-config -n flux-system \
+        kubectl create configmap platform-config -n flux-system \
           --from-literal=ZONE="${{ steps.cluster-info.outputs.location }}" \
           --from-literal=CLUSTER_NAME="${{ steps.cluster-info.outputs.cluster_name }}" \
           --from-literal=CLUSTER_TYPE="${{ steps.cluster-info.outputs.cluster_type }}" \
           --from-literal=REPO_OWNER="${{ github.repository_owner }}" \
           --from-literal=REPO_NAME="${{ github.event.repository.name }}" \
           --dry-run=client -o yaml | kubectl apply -f -
+
 
     - name: Run Flux pre-installation checks
       if: steps.cluster-info.outputs.should_proceed == 'true' && steps.cluster-ready.outputs.cluster_ready == 'true'
